k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: restaurant-api-service
  namespace: hydrabadi-restaurant
  labels:
    app: restaurant-api
spec:
  selector:
    app: restaurant-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
  type: ClusterIP
