k8s/ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: restaurant-ui-service
  namespace: hydrabadi-restaurant
  labels:
    app: restaurant-ui
spec:
  selector:
    app: restaurant-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      name: http
  type: ClusterIP
